# adventofcode

./: .gitignore  Cargo.toml  graphviz.txt
2019/: 18.py
2020/: 20.py
2021/: p12.1.cpp  p12.cpp  p13.cpp  template.cpp
2025/: package-lock.json  package.json  tsconfig.json
2025/src/: p2.ts  p3.ts  p4.ts
2025/src/lib/: grid.ts  queue.ts  utils.ts
2025/swift/Sources/swift/: swift.swift
benches/: y24_d22.rs  y24_p4.rs  y24_p5.rs  y24_p6.rs  y24_p7.rs
examples/: single.rs
inputs/y24/: 2_example.in
src/: lib.rs  main.rs  p1.rs  p10.rs  p11.rs  p12.rs  p12_2.rs  p13.rs  p13_2.rs  p14_2.rs  p15.rs  p15_2.rs  p17.rs  p17_2.rs  p2.rs  p3.rs  p4.rs  p5_1.rs  p5_2.rs  p6_1.rs  p7_2.rs  p8_2.rs
src/utils/: dict.rs  graph.rs  grid2.rs  grid2d.rs  mod.rs  vec.rs
src/y22/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y23/: mod.rs  p1.rs  p10.rs  p10_2.rs  p12_2.rs  p13_2.rs  p14.rs  p14_2.rs  p16.rs  p16_2.rs  p17.rs  p17_2.rs  p18.rs  p18_2.rs  p19_1.rs  p19_2.rs  p2.rs  p20.rs  p20_2.rs  p21.rs  p25_1.rs  p3.rs  p4.rs  p5_1.rs  p5_2.rs  p6_2.rs  p7_1.rs  p8_1.rs  p8_2.rs  p9_1.rs  p9_2.rs  p9_clean.rs
src/y24/: d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.py  d24.rs  d25.rs  d9.rs  mod.rs  p1.rs  p1_numbers.rs  p1_slow.rs  p1_trie_unsafe_accesses.rs  p1_two_tries.rs  p1_unsafecell.rs  p2.rs  p2_dp.rs  p2_hyper_optimised.rs  p3.rs  p3_regex.rs  p4.rs  p4_rayon.rs  p4_rayon_lookup_table.rs  p4_slow.rs  p5.rs  p5_naive.rs  p6.rs  p7.rs  p8.rs
