[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

eyre = "0.6.9"
regex = "1.10.2"
lazy_static = "1.4.0"
num = "0.4.1"
log = "0.4.20"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
enum-map = "2.7.3"

[dev-dependencies]
rstest = "0.18.2"
