[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.10.2"
lazy_static = "1.4.0"
num = "0.4.1"
log = "0.4.20"
itertools = "0.12.1"
serde = { version = "1.0.196", features = ["derive"] }
enum-map = "2.7.3"
color-eyre = "0.6.2"
rayon = "1.10.0"
memchr = "2.7.4"
bitvec = "1.0.1"
serde_json = "1.0.133"
nom = "7.1.3"

[dev-dependencies]
rstest = "0.18.2"
divan = "0.1.16"

[[bench]]
name = "y24_p4"
harness = false

[[bench]]
name = "y24_p5"
harness = false

[[bench]]
name = "y24_p6"
harness = false

[[bench]]
name = "y24_p7"
harness = false
