[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.10.2"
num = "0.4.1"
itertools = "0.13.0"
serde = { version = "1.0.196", features = ["derive"] }
color-eyre = "0.6.2"
rayon = "1.10.0"
memchr = "2.7.4"
bitvec = "1.0.1"
serde_json = "1.0.133"
nom = "7.1.3"
num-traits = "0.2.19"
fxhash = "0.2.1"
strum = { version = "0.26.3", features = ["derive"] }

[lints.rust]
dead_code = { level = "allow" }

[dev-dependencies]
divan = "0.1.16"

[[bench]]
name = "y24_p4"
harness = false

[[bench]]
name = "y24_p5"
harness = false

[[bench]]
name = "y24_p6"
harness = false

[[bench]]
name = "y24_p7"
harness = false

[[bench]]
name = "y24_d22"
harness = false
